# ZyeuteV5

./: .cursorrules  .empty-commit-placeholder  .env.example  .env.render  .env.vercel.example  .env.vertex  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .lighthouserc.js  .lighthouserc.json  .mcp.json.example  .npmrc  .railwayignore  .replit  .security_update  .vercelignore  AGENTS.md  AGENT_AUTONOMY_CHECKLIST.md  AGENT_QUICK_START.md  AGENT_TRAINING_GUIDE.md  AI_INSTRUCTIONS.md  AI_INTEGRATION_REPORT.md  ALL_PROBLEMS_LIST.md  ANTIGRAVITY_SETUP.md  API_TEST_CALLS.md  APPLY_MIGRATION_IN_SUPABASE.md  AUDIT_MASTER_TRACKER.md  AUTOMATIC_VALIDATION_SETUP.md  AUTONOMOUS_ARCHITECTURE_MASTER.md  BACKEND_HEALTH_CHECK.md  BUG_TRACKER.md  CHANGELOG.md  CHAT_ENHANCED_FEATURES.md  CHAT_INTERFACE_USAGE.md  CHAT_ULTIMATE_GUIDE.md  CHAT_ZYEUTE_README.md  CI_FIXES_SUMMARY.md  (+215 more)
.claude/: QUICK_START.md
.cursor/: extensions.json  mcp-config.json
.gemini/: system.md
.github/: CI_CD_COMPLETE.md  CI_CD_QUICK_START.md  DEPENDENCY_MAP_TEMPLATE.md  (+17 more)
colony-kernel/: ACTIVATION_CHECKLIST.md  INTEGRATION_GUIDE.md  README.md  START_KERNEL.md  pyproject.toml  requirements.txt  simulate_hive.py
colony-kernel/colonyos/: main.py
colony-kernel/colonyos/api/: __init__.py  rest.py
colony-kernel/colonyos/body/: __init__.py  burner.py  kernel.py  queue.py  workers.py
colony-kernel/colonyos/core/: __init__.py  event_bus.py  memory.py  models.py  types.py
colony-kernel/colonyos/guardian/: neurasphere.py  safety.py
colony-kernel/colonyos/mind/: neurosphere.py
(+1971 files in other folders)
